# foreverpython

./: .gitignore  LICENSE  converter.cjs  package.json  pnpm-lock.yaml  pyproject.toml  readme.md  wrangler.jsonc
.github/workflows/: build.yaml
docs/: blogs.data.js  browse.md  index.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: index.ts
docs/.vitepress/theme/components/: Comments.vue
docs/notebooks/: langchain_chat.ipynb  openai_chat.ipynb
docs/public/: _headers  robots.txt  site.webmanifest
