[project]
name = "foreverpython"
version = "0.1.0"
description = ""
authors = [
    {name = "Mohankumar Ramachandran",email = "mohankumarelec@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyterlite-core[all] (>=0.6.1,<0.7.0)",
    "black[jupyter] (>=25.1.0,<26.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
